--- a/app/views/layouts/admin/menu.html.erb
+++ b/app/views/layouts/admin/menu.html.erb
@@ -4,11 +4,12 @@
     </div>
     <div id='menu_buttons'>
 
-    <a href="#">
-        <div class='button menu_button' style='margin: 0px; padding: 7px;' class='button'>
-            Back
-        </div>
-    </a>
+        <%= link_to( yield :back ) do %>
+            <div class='button menu_button' style='margin: 0px; padding: 7px;' class='button'>
+                Back
+            </div>
+        <% end %>
+
         <%= link_to( "/admin" ) do %>
             <div class='button menu_button' style='margin: 0px; padding: 7px;' class='button'>
                 Home
