--- a/app/views/admin/home/index.html.erb
+++ b/app/views/admin/home/index.html.erb
@@ -2,17 +2,29 @@
     <div style='font-size: 20px;margin:5px;'> Actions: </div>
     
     <%= link_to raw("<div class='button'>Manage Pages</div>"), "admin/pages#index" %>
+
+    <%= link_to( admin_blog_index_path ) do %>
+        <div class='button'>Manage Blog</div>
+    <% end %>
 </div>
 
 <div class='right_box'>
     <a style='font-size: 20px;'>Action Log</a>
     <table class='table'>
         <thead>
-            <th>User</th>
+            <th>Time</th>
             <th>Action</th>
         </thead>
         <tbody id='log_preview'>
+            <% @actions.each do |action| %>
+                <tr>
+                    <td><%= action.created_at.asctime %></td>
+                    <td><%= action.title.to_s %></td>
+                </tr>
+            <% end %>
         </tbody>
     </table>
-    <a href='log/'><div class='button'>View Full Log</div></a>
+    <%= link_to( admin_admin_actions_path ) do %>
+        <div class='button'>View Full Log</div>
+    <% end %>
 </div>
