Added category controller. Need delete js still

--- a/app/assets/stylesheets/admin/admin.css.erb
+++ b/app/assets/stylesheets/admin/admin.css.erb
@@ -3,7 +3,7 @@ body
     font-family: 'Shanti', sans-serif;
     background-color: #cccccc;
     color: #222222;
-    background: url('white_stripe.png');
+    background: url(<%= asset_path 'blog_images/white_stripe.png' %>);
     background-repeat: repeat;
 }
 a:link
