--- a/app/views/admin/blog/index.html.erb
+++ b/app/views/admin/blog/index.html.erb
@@ -18,7 +18,7 @@
                         <div class='button edit' style='display:inline-block;'>Edit</div>
                     <% end %>
 
-                    <%= link_to( admin_blog_post_path(post), method: :delete, confirm: "Are you sure? (Cannot be undone)", remote: true ) do %>
+                    <%= link_to( admin_blog_post_path(post), method: :delete, data: { confirm: 'Are you sure? (Cannot be undone)' }, remote: true ) do %>
                         <div class='button delete' style='display:inline-block;'>Delete</div>
                     <% end %>
                 </td>
@@ -36,16 +36,26 @@
     <table class="table">
         <thead>
             <th>Category Name</th>
+            <th></th>
         </thead>
         <tbody id='rows'>
             <% @categories.each do |category| %>
                 <tr>
                     <td><%= category.name %></td>
+                    <td>
+                        <%= link_to( edit_admin_category_path(category) ) do %>
+                            <div class='button edit' style='display:inline-block;'>Edit</div>
+                        <% end %>
+
+                        <%= link_to( admin_category_path(category), method: :delete, data: { confirm: 'Are you sure? (Cannot be undone)' }, remote: true ) do %>
+                            <div class='button delete' style='display:inline-block;'>Delete</div>
+                        <% end %>
+                    </td>
                 </tr>
             <% end %>
         </tbody>
     </table>
-    <%= link_to( about_path ) do %>
+    <%= link_to( new_admin_category_path ) do %>
         <div class='button'>
             New Category
         </div>
